--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		<title>Sharvil Kadam</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-						
+		
+		    <meta name="author" content="" />
+		    <meta name="keywords" content="sharvil, kadam, sharvil kadam,Sharvil Kadam,Sharvil, Kadam, USC, University of Southern California, graduate, computer science, trojan, DJSCOE, DJ, DJ Sanghvi, Dwarkadas J Sanghvi College of Engineering, university of southern california, usc, los angeles, la, california, ca, software engineering, coder, java, , leader, php, customer success." />
+
 	</head>
 
 	<body>
@@ -422,7 +424,7 @@
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			
 			<script src="assets/js/main.js"></script>
 
 	</body>
