--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 									  <!--<div class="row top-buffer">
 										<div class="col-lg-8 col-lg-offset-2">
 										-->
-										  <h3 style="text-align:center"><a target="_blank" href="http://goo.gl/hpSaS2">Download Resume</a></h3> 
+										  <h3 style="text-align:center"><a target="_blank" href="https://drive.google.com/open?id=0B1fPIwPe69knQVlUZ0ZrVWlnSjQ">Download Resume</a></h3> 
 										  
 										<!--</div>
 									  </div>-->
