--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 															  <h4>March 2015 - June 2015</h4>
 														  </div>
 														  <div class="timeline-body">
-															  <p class="text-muted"><p>Software Development Intern at <a href="https://bloomigo.in" target="_blank">Bloomigo.in</a></p>
+															  <p class="text-muted"><p>Software Development Intern at <a href="http://bloomigo.in" target="_blank">Bloomigo.in</a></p>
 									</p>
 														  </div>
 													  </div>
@@ -347,7 +347,7 @@
 
 												<li class="timeline-inverted">
 												  <div class="timeline-image timeline-image-first">
-													<img class="insideimg" src="images/born2.jpg" alt="">
+													<img class="insideimg" src="images/born2.jpg" alt="Born">
 												  </div>
 												  
 												</li>
