--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<li><a href="#two">Things I Can Do</a></li>
 						<li><a href="#three">A Few Accomplishments</a></li>
 						<li><a href="#four">Timeline</a></li>
+						<li><a href="#resume">Resume</a></li>
 						<li><a href="#five">Contact</a></li>
 					</ul>
 				</nav>
@@ -360,8 +361,9 @@
 									  <!--<div class="row top-buffer">
 										<div class="col-lg-8 col-lg-offset-2">
 										-->
+										<section id="resume">
 										  <h3 style="text-align:center"><a target="_blank" href="https://drive.google.com/open?id=0B1fPIwPe69knem1VaHUwZmR5QTQ">Download Resume</a></h3> 
-										  
+										</section>
 										<!--</div>
 									  </div>-->
 									  
