--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 												  
 												  ">
 													  <div class="timeline-image"><!-- style="background-image:url('images/USC.jpg')">-->
-														  <img class="insideimg" src="images/Fooddev.png" alt="Trojan Hacks ">
+														  <img class="insideimg" src="images/Fooddev.png" alt="Trojan Hacks"></img>
 													  </div>
 													  <div class="timeline-panel">
 														  <div class="timeline-heading">
