--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
 									<b>public &nbspclass &nbspSharvil &nbsp&nbsp{</b><br/><br>
 									<p> void&nbsp&nbsp&nbspmySummary&nbsp(&nbsp)&nbsp&nbsp&nbsp{</b>
 										
-										<div class="syso">System.out.println("As a goal-oriented and focused student pursuing a Master's Degree in Computer Science at USC, I'm actively looking for internships for Summer 2017 in the field of Software and Data where I can give 100% of my dedication to help the company grow further. I like to develop applications, play football, go to the Gym. But the main thing that defines me is that I like to learn. Seeing people create great things motivates and excites me the most. Given my skill set and knowledge in the field of Computer Science, I'm confident that I can be a great asset to your team.");
+										<div class="syso">System.out.println &nbsp("The main thing that defines me is that I like to learn. Seeing people develop great things, motivates and excites me the most. A strong professional with a Masters degree in Computer Science from University of Southern California.
+My areas of expertise are Backend and Databases with a strong interest in Machine learning and Natural Language Processing.
+Given my skill set and knowledge in the field of Computer Science along with great communication skills, I'm confident that I can be a great asset to your team.");
 										</div>
 									<br><b>}</b><br></p>
 									<p> <b>void&nbsp&nbsp&nbspmyGoals&nbsp(&nbsp)&nbsp&nbsp&nbsp{</b>
