--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<b>public &nbspclass &nbspSharvil &nbsp&nbsp{</b><br/><br>
 									<p> void&nbsp&nbsp&nbspmySummary&nbsp(&nbsp)&nbsp&nbsp&nbsp{</b>
 										
-										<div class="syso">System.out.println &nbsp("The main thing that defines me is that I like to learn. Seeing people develop great things, motivates and excites me the most. A strong professional with a Masters degree in Computer Science from University of Southern California.
+										<div class="syso">System.out.println ("The main thing that defines me is that I like to learn. Seeing people develop great things, motivates and excites me the most. A strong professional with a Masters degree in Computer Science from University of Southern California.
 My areas of expertise are Backend and Databases with a strong interest in Machine learning and Natural Language Processing.
 Given my skill set and knowledge in the field of Computer Science along with great communication skills, I'm confident that I can be a great asset to your team.");
 										</div>
@@ -113,6 +113,20 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 									<h3 style="text-align:center">A Few Accomplishments</h3>
 									<p style="text-align:center">Important Projects Developed and Things I am proud of..</p>
 									<div class="features">
+										<article>
+											<a href="https://devpost.com/software/snipe" class="image" target="_blank"><img src="images/gun.jpg" alt="Project_Snipe" /></a>
+											<div class="inner">
+												<h4>Project Snipe</h4>
+												<p>Developed at Cal Hacks 4.0 UC Berkeley. Won Best API use award.<br>
+												In the aftermath of the recent mass shooting in Las Vegas, our prayers are with the 59 people who lost their lives and the 527 people who were badly injured.
+												<br>
+												But are our prayers sufficient? In this technology age, with machine learning and other powerful AI algorithms being invented and used heavily in systems all over the world, we took this opportunity provided by Cal Hacks to build something that has the potential to have a social impact on the world by aiming to prevent such incidents of mass shootings.</p>
+												
+												<a href="https://github.com/sharvilkadam/project_snipe" target="_blank">CODE REPOSITORY</a><br><br>
+												<a href="https://www.youtube.com/watch?v=8HiP_KEbpkw" target="_blank">Demo 1</a>
+												<a href="https://www.youtube.com/watch?v=8ooiX8JtG_U" target="_blank">Demo 2</a>
+											</div>
+										</article>
 										<article>
 											<a href="https://drive.google.com/open?id=0B1fPIwPe69knaG1VN0NEN2JaNmc" class="image" target="_blank"><img src="images/mapview.png" alt="E-Community" /></a>
 											<div class="inner">
