--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 												  
 												  ">
 													  <div class="timeline-image"><!-- style="background-image:url('images/USC.jpg')">-->
-														  <img class="insideimg" src="images/imsc.jpg" alt="IMSC">
+														  <img class="insideimg" src="images/imsc.png" alt="IMSC">
 													  </div>
 													  <div class="timeline-panel">
 														  <div class="timeline-heading">
 															  <h4>May 2017 - Ongoing</h4>
 														  </div>
 														  <div class="timeline-body">
-															  <p class="text-muted"><p>Student Worker @ <a href="http://imsc.usc.edu/" target="_blank">USC IMSC</a>(Integrated Media Systems Center)</p>
+															  <p class="text-muted"><p>Student Worker @ <a href="http://imsc.usc.edu/" target="_blank">USC IMSC</a> (Integrated Media Systems Center)</p>
 									</p>
 														  </div>
 													  </div>
@@ -213,7 +213,7 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 												  	timeline-inverted
 												  ">
 													  <div class="timeline-image"><!-- style="background-image:url('images/USC.jpg')">-->
-														  <img class="insideimg" src="images/snipe.jpg" alt="Project snipe ">
+														  <img class="insideimg" src="images/snipe.png" alt="Project snipe ">
 													  </div>
 													  <div class="timeline-panel">
 														  <div class="timeline-heading">
@@ -230,7 +230,7 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 												  
 												  ">
 													  <div class="timeline-image"><!-- style="background-image:url('images/USC.jpg')">-->
-														  <img class="insideimg" src="images/pray.jpg" alt="Pray.com">
+														  <img class="insideimg" src="images/pray.png" alt="Pray.com">
 													  </div>
 													  <div class="timeline-panel">
 														  <div class="timeline-heading">
