--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 												  	timeline-inverted
 												  ">
 													  <div class="timeline-image"><!-- style="background-image:url('images/USC.jpg')">-->
-														  <img class="insideimg" src="images/mirage.jpg" alt="Mirage ">
+														  <img class="insideimg" src="images/mirage.png" alt="Mirage ">
 													  </div>
 													  <div class="timeline-panel">
 														  <div class="timeline-heading">
