--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="https://in.linkedin.com/in/sharvilkadam" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sharvilkadam" target="_blank" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/sharvilkadam" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.facebook.com/sharvil.kadam" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/sharvil_k/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -513,7 +513,7 @@ Given my skill set and knowledge in the field of Computer Science along with gre
 				<!-- Footer -->
 				<footer style="text-align:center">
 					<ul class="icons">
-						<li><a href="https://in.linkedin.com/in/sharvilkadam" target="_blank"  class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sharvilkadam" target="_blank"  class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/sharvilkadam" target="_blank" class="icon fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://www.facebook.com/sharvil.kadam" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="https://www.instagram.com/sharvil_k/" target="_blank" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
