--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 				<header>
 					<!--<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>-->
 					<h1 id="logo"><a href="#">Sharvil Kadam</a></h1>
-					<p>Work Out and Study Hard ..<br />
-					Carpe Diem..</p>
+					<p>Work Out and Study Hard <br />
+					Carpe Diem</p>
 				</header>
 				<nav id="nav">
 					<ul>
