--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
 									<p style="text-align:center">Send me an email if you would like to get in touch, hire me for your next project, have questions or feedback on my work, or just want to say hello.</p>
 									
 									
-									<h4 style="text-align:center"><a href="mailto:sharvilkadam786@gmail" target="_blank" >Email :  sharvilkadam786@gmail.com</a></h4>
+									<h4 style="text-align:center"><a href="mailto:sharvilkadam786@gmail.com" target="_blank" >Email :  sharvilkadam786@gmail.com</a></h4>
 									<!--
 									<form method="post" onsubmit="sendMail()">
 										<div class="row uniform">
